# cryptolight

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/: backtest-engineer.md  exchange-engineer.md  quant-analyst.md  risk-manager.md  strategy-developer.md
agents/skills/: backtesting-frameworks.md  exchange-api-patterns.md  risk-metrics.md
deploy/systemd/: cryptolight.service
docs/: architecture.md  deployment.md  operations.md  setup-guide.md  strategy.md
src/cryptolight/: __init__.py  __main__.py  health.py  main.py
src/cryptolight/backtest/: __init__.py  __main__.py  data_loader.py  engine.py  walk_forward.py
src/cryptolight/bot/: __init__.py  ai_assistant.py  command_handler.py  formatters.py  telegram_bot.py
src/cryptolight/config/: __init__.py  settings.py
src/cryptolight/evaluation/: __init__.py  arena.py  controller.py  optimizer.py  performance.py
tasks/: lessons.md  todo.md
tests/: test_arena.py  test_backtest.py  test_candle_cache.py  test_candle_interval.py  test_command_handler.py  test_controller.py  test_cooldown.py  test_criteria.py  test_health.py  test_improvements.py  test_logger.py  test_optimizer.py  test_paper_broker.py  test_parameter_tuning.py  test_performance.py  test_position_sizer.py  test_price_stream.py  test_regime.py  test_risk_guard.py  test_score_based.py  test_screener.py  test_settings.py  test_strategies.py  test_strategy_tracker.py  test_telegram_bot.py  test_upbit_screening.py  test_volume_filter.py  test_walk_forward.py  test_web.py
(+41 files in other folders)
